--- a/views/nguoiDung.hbs
+++ b/views/nguoiDung.hbs
@@ -30,7 +30,7 @@
                             {{this.hoTen}}
                         </div>
                         <div class="">
-                            Số điện thoại: 0{{this.soDienThoai}}
+                            Số điện thoại: {{this.soDienThoai}}
                         </div>
                         {{#if this.gioiTinh}}
                         <div class="">Giới tính: Nam</div>
@@ -42,7 +42,7 @@
                         <a href="" uk-icon="icon: more-vertical"></a>
                         <div uk-dropdown="pos: bottom-right">
                             <ul class="uk-nav uk-dropdown-nav uk-text-left">
-                                <li><a href="/layout/xoaNguoiDung/{{nguoiDung._id}}">Xóa người dùng</a></li>
+                                <li><a href="/layout/xoaNguoiDung/{{this._id}}">Xóa người dùng</a></li>
                                 <li><a href="/layout/nguoiDungChiTiet/{{this._id}}">Xem thông tin chi tiết</a></li>
                             </ul>
                         </div>
